# Quincy

./: Cargo.toml  LICENSE.txt  README.md  justfile
.cargo/: config
Editor/: Editor.sln
Editor/Editor/: App.axaml  App.axaml.cs  Editor.csproj  MyContainer.cs
Editor/Editor.Desktop/: Editor.Desktop.csproj  Program.cs
crates/OvCore/: Cargo.toml
crates/OvCore/src/: lib.rs
crates/OvCore/src/ecs/: component.rs  drawable.rs  game_object.rs  graph.rs  mod.rs  renderer.rs
crates/OvCore/src/ecs/components/: camera.rs  material_render.rs  mesh_render.rs  mod.rs  transform.rs
crates/OvCore/src/resources/: material.rs  resource_manager.rs
crates/OvCore/src/scene_system/: scene.rs  scene_manager.rs
crates/OvExport/: Cargo.toml  fangzi.mesh  fangzi.mtl  无标题.glb
crates/OvExport/src/: main.rs
crates/OvGame/: Cargo.toml
crates/OvGame/assets/: fangzi.dds  main.scene  qiu.dds  test.scene
crates/OvGame/src/: main.rs
crates/OvGame/src/core/: application.rs  context.rs  game.rs  game_render.rs  mod.rs
crates/OvGame/src/script/: example.rs
crates/OvJs/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/OvMacros/: Cargo.toml
crates/OvRender/: Cargo.toml
crates/OvScript/: Cargo.toml
crates/OvTools/: Cargo.toml
crates/OvUI/: Cargo.toml
crates/OvUI/src/: lib.rs
crates/OvUI/src/component/: button.rs  image.rs  input.rs  label.rs  mod.rs  panel.rs  textbox.rs
crates/OvUI/src/component/canvas/: canvas.rs  mod.rs  uiNode.rs
crates/OvUI/src/core/: mod.rs  uiBind.rs  ui_manager.rs
crates/OvUI/src/message/: ime.rs
crates/OvWindowing/: Cargo.toml
crates/OvWindowing/src/: lib.rs  window.rs
crates/OvWindowing/src/context/: device.rs
crates/OvWindowing/src/input/: event.rs  input_manager.rs  mod.rs
crates/OvWindowing/src/settings/: window_settings.rs
crates/QcCore/: Cargo.toml
crates/QcCore/src/: lib.rs
crates/QcCore/src/ecs/: component.rs  drawable.rs  game_object.rs  graph.rs  mod.rs  renderer.rs
crates/QcCore/src/ecs/components/: camera.rs  light.rs  material_render.rs  mesh_render.rs  mod.rs  skybox.rs  transform.rs
crates/QcCore/src/resources/: material.rs  mod.rs  resource_manager.rs
crates/QcCore/src/scene_system/: mod.rs  scene.rs  scene_manager.rs
crates/QcEditor/: Cargo.toml
crates/QcEditor/src/: 1.rs  main.rs  main1.rs
crates/QcEditor/src/components/: dock_panel.rs  mod.rs
crates/QcEditor/src/components/dock/: dock_item.rs  dock_layout.rs  dock_panel.rs  dock_view.rs  dock_widget.rs  mod.rs
crates/QcEditor/src/components/nestable/: app.rs  drag_and_drop.rs  mod.rs
crates/QcEditor/src/core/: application.rs  camera_controller.rs  context.rs  editor.rs  editor_actions.rs  editor_panel.rs  editor_render.rs  editor_renderer.rs  editor_resources.rs  gizmo_behavior.rs  message.rs  mod.rs  project.rs  project_hub.rs  project_hub_panel.rs
crates/QcEditor/src/inspector/: material_render.rs  mesh_render.rs  mod.rs  transform.rs
crates/QcEditor/src/managers/: mod.rs  page_manager.rs
crates/QcEditor/src/pages/: editor_page.rs  mod.rs  project_hub_page.rs
crates/QcEditor/src/panel/: attr_panel.rs  game_panel.rs  layer_panel.rs  mod.rs  nav_panel.rs  res_panel.rs  res_preview_panel.rs  scene_panel.rs
crates/QcExport/: .gitignore  Cargo.toml  cube.mesh  plane.mtl  qiu.mtl  rotate.mtl  scale.mesh  scale.mtl  translate.mtl  xmake.lua  无标题.fbx
crates/QcExport/rust/: Cargo.toml  build.rs
crates/QcExport/rust/src/: lib.rs
crates/QcExport/src/: main.rs  mainwindow.cpp  mainwindow.h  mainwindow.ui
crates/QcGame/: Cargo.toml
crates/QcGame/assets/: 123.dds  index.html  main.scene  plane.dds  texture.dds
crates/QcGame/src/: main.rs
crates/QcGame/src/core/: application.rs  context.rs  game.rs  game_render.rs
crates/QcGame/src/script/: example.rs
crates/QcJs/: package-lock.json  package.json  pnpm-lock.yaml  rescript.json  tsconfig.json  vite.config.ts
crates/QcMacros/: Cargo.toml
crates/QcRender/: Cargo.toml  build.rs
crates/QcRender/assets/: empty.dds
crates/QcRender/assets/model/: cube.mesh  rotate.mesh  skybox.mesh  translate.mesh
crates/QcRender/assets/shader/output/: gizmo.frag.spv  gizmo.vert.spv  grid.frag.spv  grid.vert.spv  skybox.frag.spv  skybox.vert.spv  standard.frag.spv  standard.vert.spv
crates/QcRender/assets/shader/src/: gizmo.frag  gizmo.vert  grid.frag  grid.vert  skybox.frag  skybox.vert  standard.frag  standard.vert
crates/QcRender/assets/skybox/: back.dds  bottom.dds  front.dds  left.dds  right.dds  top.dds
crates/QcRender/src/: lib.rs
crates/QcRender/src/buffers/: duck_frame_buffer.rs  frame_buffer.rs  index_buffer.rs  mod.rs  shader_storagr_buffer.rs  uniform_buffer.rs  vertex_array.rs  vertex_buffer.rs
crates/QcRender/src/context/: driver.rs
crates/QcRender/src/core/: draw_type.rs  mod.rs  renderer.rs  shape_drawer.rs
crates/QcRender/src/geometry/: mod.rs  rect.rs  vertex.rs
crates/QcRender/src/resources/: mesh.rs  mod.rs  model.rs  shader.rs  texture.rs  uniform_info.rs  uniform_type.rs
crates/QcRender/src/settings/: driver_settings.rs  mod.rs  pixel_data.rs
crates/QcScript/: Cargo.toml
crates/QcScript/src/: lib.rs
crates/QcScript/src/core/: js_component.rs  js_runtime_manager.rs  mod.rs
crates/QcScript/src/core/ops/: component.rs  gameobject.rs  mod.rs
crates/QcScript/src/core/ops/components/: transform.rs
crates/QcScript/src/utils/: GoExt.rs
crates/QcUI/: Cargo.toml
crates/QcUI/src/: lib.rs
crates/QcUI/src/component/: button.rs  grid.rs  image.rs  image_loader.rs  label.rs  mod.rs  panel.rs  textbox.rs  widget.rs
crates/QcUI/src/component/canvas/: canvas.rs  domNode.rs  htmlRender.rs  mod.rs  uiNode.rs
crates/QcUI/src/core/: context.rs  htmlRender.rs  mod.rs  uiBind.rs  ui_manager.rs
crates/QcUI/src/math/: rect.rs
crates/QcUI/src/message/: ime.rs  mod.rs
crates/QcWindowing/: Cargo.toml
crates/QcWindowing/src/: window.rs
crates/QcWindowing/src/context/: device.rs
crates/QcWindowing/src/input/: event.rs  input_manager.rs  mod.rs
crates/QcWindowing/src/settings/: device_settings.rs  mod.rs  window_settings.rs
(+102 files in other folders)
