[package]
name = "OvExport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obj-rs = "0.7.1"

ron = "0.8.1"
OvRender = { path = "../OvRender" }
nalgebra = {version = "0.32.3",features = ["serde"]}
tobj = "4.0.0"