[package]
edition = "2021"
name = "OvUI"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
OvTools = {path = "../OvTools"}
OvWindowing = {path = "../OvWindowing"}
egui = "0.22"
egui-glutin-gl = {git = "https://github.com/996666925/egui-glutin-gl"}
