[package]
edition = "2021"
name = "OvUI"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
OvTools = { path = "../OvTools" }
OvWindowing = { path = "../OvWindowing" }
egui = { version = "0.22", features = ["serde"] }
egui-glutin-gl = { git = "https://github.com/996666925/egui-glutin-gl" }
OvCore = { path = "../OvCore" }
OvMacros = { path = "../OvMacros" }
serde = { version = "1", features = ["derive"] }
typetag = "0.2.13"
OvRender = { path = "../OvRender" }
taffy = { version = "0.3.18", features = ["serde"] }
thunderdome = {path="../../../thunderdome"}

html5ever = "0.26.0"
deno_core = { git = "https://github.com/996666925/deno_core" }
enum_variant_eq = "0.1.0"