[package]
name = "QcEditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
QcRender = { path = "../QcRender" }
QcTools = { path = "../QcTools" }
QcUI = { path = "../QcUI" }
QcWindowing = { path = "../QcWindowing" }
QcCore = { path = "../QcCore" }
QcMacros = { path = "../QcMacros" }
thunderdome = { path = "../../../thunderdome" }
serde = { version = "1", features = ["derive"] }
typetag = "0.2.13"
egui_tiles = "0.7.2"
nalgebra = { version = "0.32.3", features = ["serde"] }
rand = "0.8.5"

egui = "0.26"
egui-winit = "0.26"
serde_json = "1.0.114"